<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.mitrakoff.self</groupId>
  <artifactId>tommy-push-server</artifactId>
  <version>1.0.0</version>

  <!-- Set encoding to suppress warnings of Maven -->
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
    <!-- Google.Firebase messaging -->
    <dependency>
      <groupId>com.google.firebase</groupId>
      <artifactId>firebase-admin</artifactId>
      <version>9.1.1</version>
    </dependency>
    <!-- http library -->
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>4.10.0</version>
    </dependency>
    <!-- jq processing -->
    <dependency>
      <groupId>io.burt</groupId>
      <artifactId>jmespath-jackson</artifactId>
      <version>0.5.1</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Plugin to specify Java version -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>9</source>
          <target>9</target>
        </configuration>
      </plugin>
      <!-- Fat Jar -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>com.mitrakoff.self.tommypush.Main</mainClass>
            </manifest>
          </archive>
          <finalName>tommypush</finalName>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>assemble-all</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
